Fix alignement

--- a/public/latex.css
+++ b/public/latex.css
@@ -1037,6 +1037,7 @@ div.abstract {width:100%;}
 .abstracttitle{text-align:center;margin-bottom:1em;}
 figure.float, div.figure {margin-left: auto; margin-right: auto;}
 figure.figure {text-align:center;}
+figure.figure pre.lstlisting {text-align:left;}
 figcaption.caption {text-indent:-2em; margin-left:3em; margin-right:1em; text-align:left;}
 figcaption.caption span.id{font-weight: bold; white-space: nowrap; }
 div.caption, figcaption.caption { font-size: 0.9em; }
